--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <div class="about-info">
 
                     <div class="info">
-                        <a href=assets\images\About\CV_Andy_Daffa_Ramadhoni.pdf class="btn popup-pdf">View CV <i
+                        <a href=assets\images\About\CV_Andy__Daffa__Ramadhoni.pdf class="btn popup-pdf">View CV <i
                                 class="fas fa-eye"></i></a>
                     </div>
 
